// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: pi/arrow > arrow type: Num -> Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(t1: Num) -> Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > output type must be a Type: (x: Num) -> x 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Num ~~ Type",
    ],
    "term": "Π(x: Num) -> x",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > pi explicit: (x: Num) -> Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(x: Num) -> Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > pi implicit: (x: Num) => Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(x: Num) => Num",
    "type": "Type",
  },
}
`;
